[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-study-tool"
version = "1.2.2"
description = "A tool for studying Leetcode with Python"
authors = [{name="John Sutor", email="johnsutor3@gmail.com" }]
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = ["requests", "XlsxWriter", "p_tqdm"]
keywords = ["leetcode", "leet", "study", "Anki"]
classifiers=[
            # Development status
            'Development Status :: 4 - Beta',

            # Supported OS
            'Operating System :: Microsoft :: Windows',
            'Operating System :: MacOS',
            'Operating System :: POSIX :: Linux',

            # Supported Python versions
            'Programming Language :: Python :: 3.7',
            'Programming Language :: Python :: 3.8',
            'Programming Language :: Python :: 3.9',
            'Programming Language :: Python :: 3.10',
            'Programming Language :: Python :: 3.11',

            # License
            'License :: OSI Approved :: MIT License',

            # Topic
            'Topic :: Software Development',
            'Topic :: Education',
        ]

[tool.black]
line-length = 80
target-version = ["py37", "py38", "py39", "py310", "py311"]

[options]
python_requires = ">=3.6"

[project.scripts]
leetcode-study-tool = "leetcode_study_tool.cli:main"

[project.urls]
homepage = "https://github.com/johnsutor/leetcode-study-tool"
repository = "https://github.com/johnsutor/leetcode-study-tool"
changelog = "https://github.com/johnsutor/leetcode-study-tool/blob/main/CHANGELOG.md"

[tool.mypy]
exclude = [
    "build",
    "scripts"
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["leetcode_study_tool"]  

# [project.optional_dependencies]
# scripts = ["google-api-python-client", "google-auth-oauthlib", "google-auth-httplib2"]