[build-system]
requires = ["setuptools>=62.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-study-tool"
version = "1.3.5"
description = "A tool for studying Leetcode with Python"
requires-python = ">=3.8"
authors = [{name="John Sutor", email="johnsutor3@gmail.com" }]
license = {file = "LICENSE.txt"}
readme = "README.md"
keywords = ["leetcode", "leet", "study", "Anki"]
classifiers=[
            # Development status
            'Development Status :: 5 - Production/Stable',

            # Supported OS
            'Operating System :: Microsoft :: Windows',
            'Operating System :: MacOS',
            'Operating System :: POSIX :: Linux',

            # Supported Python versions
            'Programming Language :: Python :: 3.8',
            'Programming Language :: Python :: 3.9',
            'Programming Language :: Python :: 3.10',
            'Programming Language :: Python :: 3.11',
            'Programming Language :: Python :: 3.12',
            'Programming Language :: Python :: 3.13',

            # License
            'License :: OSI Approved :: MIT License',

            # Topic
            'Topic :: Software Development',
            'Topic :: Education',
        ]
dependencies = [
    "requests==2.32.3",
    "xlsxwriter==3.2.0",
    "p-tqdm==1.4.2",
    "jinja2==3.1.5",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.6",
    "mypy==1.14.1",
    "types-requests>=2.32.0",
    "google-api-python-client==2.157.0",
    "pytest==8.3.4",
    "pytest-cov>=5.0.0"
]

[tool.black]
line-length = 80
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]

[options]
python_requires = ">=3.6"

[dependency-groups]
dev = [
    "google-api-python-client==2.157.0",
    "mypy==1.14.1",
    "pytest==8.3.4",
    "pytest-cov>=5.0.0",
    "ruff==0.8.6",
    "types-requests>=2.32.0",
]

[project.scripts]
leetcode-study-tool = "leetcode_study_tool.cli:main"

[project.urls]
homepage = "https://github.com/johnsutor/leetcode-study-tool"
repository = "https://github.com/johnsutor/leetcode-study-tool"
changelog = "https://github.com/johnsutor/leetcode-study-tool/blob/main/CHANGELOG.md"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "SIM"]

[tool.mypy]
exclude = [
    "build",
    "scripts"
]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["leetcode_study_tool"]  
